# messdb

./: .gitlab-ci.yml  README.md  default.nix  messdb.cabal  release.nix  stack.yaml
messdb/: messdb.cabal
messdb-base/: LICENSE  messdb-base.cabal
messdb-base-testlib/: messdb-base-testlib.cabal
messdb-base-testlib/src/MessDB/Test/: MemoStore.hs  Store.hs
messdb-base/src/MessDB/: Store.hs  Table.hs  Trie.hs
messdb-base/src/MessDB/Table/: Types.hs
messdb-base/src/MessDB/Trie/: Path.hs
messdb-base/test/MessDB/Test/: TableSpec.hs  TrieSpec.hs
messdb-lmdb/: messdb-lmdb.cabal
messdb-lmdb/test/MessDB/Test/: LmdbStoreSpec.hs
messdb-repo/: messdb-repo.cabal
messdb-repo/src/MessDB/: Repo.hs
messdb-repo/src/MessDB/Repo/: Memory.hs
messdb-schema/: messdb-schema.cabal
messdb-schema/src/MessDB/: Schema.hs  Table.hs
messdb-schema/src/MessDB/Schema/: Standard.hs  Util.hs
messdb-schema/src/MessDB/Table/: Bytes.hs  Row.hs  Types.hs
messdb-schema/test/MessDB/Test/: StandardSchemaSpec.hs  TableSpec.hs
messdb-sql/: messdb-sql.cabal
messdb-sql/src/MessDB/: SQL.hs
messdb-sql/src/MessDB/SQL/: Schema.hs
messdb-sqlite/: messdb-sqlite.cabal
messdb-sqlite/src/MessDB/Store/: Sqlite.hs
messdb-sqlite/src/c-bits/: sqlite_store.cpp
messdb-sqlite/test/MessDB/Test/: SqliteStoreSpec.hs
messdb-store-lmdb/: messdb-store-lmdb.cabal
messdb-store-lmdb/src/MessDB/Store/: Lmdb.hs
messdb-store-lmdb/src/c-bits/: lmdb_store.cpp
messdb-store-lmdb/test/MessDB/Test/: LmdbStoreSpec.hs
messdb-store-sqlite/: messdb-store-sqlite.cabal
messdb-store-sqlite/src/MessDB/Store/: Sqlite.hs
messdb-store-sqlite/src/c-bits/: sqlite_store.cpp
messdb-store-sqlite/test/MessDB/Test/: SqliteStoreSpec.hs
messdb-store-zlib/: messdb-store-zlib.cabal
messdb-store-zlib/src/MessDB/Store/: Zlib.hs
messdb-tool/: messdb-tool.cabal
messdb-tool/src/: messdb-tool.hs
messdb-tool/src/MessDB/Tool/: Csv.hs  Json.hs
messdb/src/MessDB/: Store.hs  Table.hs  Trie.hs
messdb/src/MessDB/Store/: File.hs  Stat.hs
messdb/src/MessDB/Table/: Types.hs
messdb/test/MessDB/Test/: Lib.hs  TableSpec.hs  TrieSpec.hs
src/MessDB/: Node.hs  Slicing.hs  Trie.hs
src/MessDB/Store/: Debug.hs  File.hs  Memory.hs
src/MessDB/Table/: Types.hs
src/c-bits/: rollsum.c
test/MessDB/Test/: NodeSpec.hs  SlicingSpec.hs  TableSpec.hs  TrieSpec.hs
