cabal-version:       3.0
name:                messdb-base-testlib
version:             0.1.0.0
synopsis:            Base test primitives for MessDB test suites
description:         Database with incremental materialized views without tracking changes
license:             MIT
license-file:        LICENSE
author:              Alexander Bich <quyse0@gmail.com>
maintainer:          Alexander Bich <quyse0@gmail.com>
copyright:           (c) 2020 Alexander Bich
category:            Database
stability:           experimental
build-type:          Simple

library
  exposed-modules:
    MessDB.Test.MemoStore
    MessDB.Test.Store
  hs-source-dirs:      src
  build-depends:
    base
    , bytestring
    , hspec
    , messdb-base
    , stm
  ghc-options:         -Wall
  default-language:    Haskell2010
