cabal-version:       3.0
name:                messdb-schema
version:             0.1.0.0
synopsis:            Schema support for MessDB
description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Bich <quyse0@gmail.com>
maintainer:          Alexander Bich <quyse0@gmail.com>
copyright:           (c) 2020 Alexander Bich
category:            Database
stability:           experimental
build-type:          Simple

library
  exposed-modules:
    MessDB.Schema
    MessDB.Schema.Standard
  hs-source-dirs:      src
  build-depends:
    base
    , bytestring
    , cereal
    , cereal-text
    , messdb
    , text
  ghc-options:         -Wall
  default-language:    Haskell2010
