cabal-version:       3.0
name:                messdb-schema
version:             0.1.0.0
synopsis:            Schema support for MessDB
description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Bich <quyse0@gmail.com>
maintainer:          Alexander Bich <quyse0@gmail.com>
copyright:           (c) 2020 Alexander Bich
category:            Database
stability:           experimental
build-type:          Simple

library
  exposed-modules:
    MessDB.Schema
    MessDB.Schema.Standard
    MessDB.Schema.Util
    MessDB.Table
    MessDB.Table.Bytes
    MessDB.Table.Row
    MessDB.Table.Types
  hs-source-dirs:      src
  build-depends:
    aeson
    , base
    , bytestring
    , cassava
    , cereal
    , cereal-text
    , memory
    , messdb-base
    , template-haskell
    , text
    , unordered-containers
    , vector
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite messdb-schema-spectest
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:
    MessDB.Test.TableSpec
    MessDB.Test.StandardSchemaSpec
  hs-source-dirs:      test
  build-depends:
    base
    , bytestring
    , cassava
    , cereal
    , generic-arbitrary
    , hspec
    , messdb-schema
    , text
    , QuickCheck
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover
