cabal-version:       3.0
name:                messdb-sql
version:             0.1.0.0
synopsis:            SQL support for MessDB
description:         Database with incremental materialized views without tracking changes
license:             MIT
license-file:        LICENSE
author:              Alexander Bich <quyse0@gmail.com>
maintainer:          Alexander Bich <quyse0@gmail.com>
copyright:           (c) 2020 Alexander Bich
category:            Database
stability:           experimental
build-type:          Simple

library
  exposed-modules:
    MessDB.SQL
  other-modules:
    MessDB.SQL.Schema
  hs-source-dirs:      src
  build-depends:
    base
    , bytestring
    , messdb-base
    , messdb-repo
    , messdb-schema
    , simple-sql-parser
    , text
    , transformers
  ghc-options:         -Wall
  default-language:    Haskell2010
