cabal-version:       3.0
name:                messdb-store-zlib
version:             0.1.0.0
synopsis:            Zlib store wrapper
description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Bich <quyse0@gmail.com>
maintainer:          Alexander Bich <quyse0@gmail.com>
copyright:           (c) 2020 Alexander Bich
category:            Database
stability:           experimental
build-type:          Simple

library
  exposed-modules:
    MessDB.Store.Zlib
  hs-source-dirs:      src
  build-depends:
    base
    , messdb-base
    , zlib
  ghc-options:         -Wall
  default-language:    Haskell2010
