cabal-version:       3.0
name:                messdb-tool
version:             0.1.0.0
synopsis:            Command-line tool for MessDB
description:         Database with incremental materialized views without tracking changes
license:             MIT
license-file:        LICENSE
author:              Alexander Bich <quyse0@gmail.com>
maintainer:          Alexander Bich <quyse0@gmail.com>
copyright:           (c) 2020 Alexander Bich
category:            Database
stability:           experimental
build-type:          Simple

executable messdb-tool
  main-is:             messdb-tool.hs
  other-modules:
    MessDB.Tool.Csv
  hs-source-dirs:      src
  build-depends:
    aeson
    , base
    , bytestring
    , cassava
    , messdb-base
    , messdb-repo
    , messdb-schema
    , messdb-sql
    , messdb-store-sqlite
    , optparse-applicative
    , simple-sql-parser
    , text
    , time
    , transformers
    , vector
  ghc-options:         -Wall
  default-language:    Haskell2010
