cabal-version:       3.0
name:                messdb
version:             0.1.0.0
synopsis:            Database with incremental materialized views without tracking changes
description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Bich <quyse0@gmail.com>
maintainer:          Alexander Bich <quyse0@gmail.com>
copyright:           (c) 2020 Alexander Bich
category:            Database
stability:           experimental
build-type:          Simple

library
  exposed-modules:
    MessDB.Store
    MessDB.Store.Debug
    MessDB.Store.File
    MessDB.Store.Memory
    MessDB.Table
    MessDB.Table.Types
    MessDB.Trie
  hs-source-dirs:      src
  build-depends:
    base
    , bytestring
    , cereal
    , cereal-text
    , cereal-vector
    , containers
    , cryptonite
    , directory
    , hashable
    , memory
    , stm
    , text
    , unordered-containers
    , vector
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite messdb-spectest
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:
    MessDB.Test.Lib
    MessDB.Test.TableSpec
    MessDB.Test.TrieSpec
  hs-source-dirs:      test
  build-depends:
    base
    , bytestring
    , cereal
    , containers
    , generic-arbitrary
    , hspec
    , messdb
    , text
    , vector
    , QuickCheck
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover
